2008-07-05  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (IT_OVERFLOW_NEWLINE_INTO_FRINGE): Turn it off if
	word-wrapping.
	(IT_DISPLAYING_WHITESPACE): New macro.
	(move_it_in_display_line_to): Handle MOVE_TO_X requests properly
	when word-wrapping.  Simplify word-wrapping logic.  Use correct
	pixel positions when saving copies of the iterator.
	(display_line): Use proper wrap point if the last character on a
	line was preceded by whitespace.

2008-07-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (${etc}DOC): Depend on ${lisp} rather than ${shortlisp}.

2008-07-04  Kenichi Handa  <handa@m17n.org>

	* fns.c (Fstring_to_unibyte): Delete the arg ACCEPT-LATIN-1.

	* lisp.h: EXFUN adjusted for the change of Fstring_to_unibyte.

2008-07-02  Jason Rumney  <jasonr@gnu.org>

	* xfns.c (syms_of_xfns): Only define x-select-font when both
	HAVE_FREETYPE and USE_GTK

	* xdisp.c (next_element_from_display_vector): Move assignment out
	of if statement.

2008-07-02  Toru Tsuneyoshi  <t_tuneyosi@hotmail.com>

	* lisp.h (Qdelete_file, Qdelete_directory): Declare extern.

	* fileio.c (delete_by_moving_to_trash, Qmove_file_to_trash): New vars.
	(syms_of_fileio): Initialize and export them.
	(Fdelete_directory, Fdelete_file): Optionally delete via trash.

	* w32fns.c (FOF_NO_CONNECTED_ELEMENTS): Define if not already.
	(Fsystem_move_file_to_trash): New function.
	(syms_of_w32fns): Export it to lisp.

2008-07-01  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (w32font_text_extents): Don't count overhang as part
	of width.

2008-06-30  Miles Bader  <miles@gnu.org>

	* dispextern.h (struct glyph, struct it, struct iterator_stack_entry):
	Add `avoid_cursor_p' field.

	* xdisp.c (push_it, pop_it): Save/restore avoid_cursor_p field.
	(set_cursor_from_row): Skip glyphs with avoid_cursor_p set.
	(append_glyph, append_composite_glyph, produce_image_glyph)
	(append_stretch_glyph): Initialize avoid_cursor_p.
	(get_it_property): Rename from `get_line_height_property'.