@@ -1,3 +1,8 @@
+2008-07-05  Andreas Schwab  <schwab@suse.de>
+
+	* xdisp.c (get_it_property): Move out of HAVE_WINDOW_SYSTEM
+	section.
+
 2008-07-05  Chong Yidong  <cyd@stupidchicken.com>
 
 	* xdisp.c (IT_OVERFLOW_NEWLINE_INTO_FRINGE): Turn it off if
